# my-automation-project

./: README.md  asset-manifest.json  index.html
letterprogram/: .dockerignore  Dockerfile
source/: main.py  pyproject.toml
source/letterprogram/: Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
source/letterprogram/app/: main.py
source/letterprogram/app/templates/: index.html
src/: letterprogram.py
static/js/: main.163f40dd.js  main.163f40dd.js.map  main.43ef464f.js  main.43ef464f.js.map  main.487015d9.js  main.487015d9.js.map
